Profile circle style in top navigation

--- a/other/index.html
+++ b/other/index.html
@@ -27,7 +27,7 @@
       <a href="index.html" class="logo"><b>Irrational</b></a>
 
       <div class="top-menu">
-          <ul class="nav pull-right top-menu">
+          <ul class="nav pull-right top-menu" style="display:inline-block">
             <li></li>
         </ul>
     </div>
